@@ -1,3 +1,8 @@
+2005-07-14  Aaron Luchko  <aluchko@redhat.com>
+
+	* gnu/classpath/jdwp/processor/VirtualMachineCommandSet.java:
+	Implemented VirtualMachine Command Set.
+
 2005-07-14  Roman Kennke  <roman@kennke.org>
 
 	* javax/swing/AbstractButton.java
